# od-zera-do-ai-portfolio

./: .gitignore  .requested.md  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
docs/hall_of_fame/: index.md
docs/pages/: EDA_wroclaw_halfmarathon.md  analiza_titanic.md
docs/uczestnicy/: andrzej.md  andrzej_czarnecki.md  artur_lipinski.md  artur_porochonski.md  dariusz_samol.md  dawid.md  grzegorz.md  grzegorz_czopinski.md  grzegorz_jaworucki.md  hubert_drozda.md  iwona_borkowska.md  jakub_klosinski.md  jaroslaw_dziedzinski.md  kacper_szaruga.md  karol_zdankowski.md  maciej_lubaszka.md  marita.md  mariusz.md  mateusz_nowakowski.md  mb.md  michal_pecyna.md  natalia_swojak.md  patrycja_ptaszek.md  patryk.md  piotr.md  rafal_ney.md  tomasz_waniek.md
hall_of_fame/: index.html
notebooks/: add_embeds_based_entry.ipynb  add_notebook_based_entry.ipynb  add_pdf_based_entry.ipynb
projects/eda_wroclaw_halfmarathon/: index.html
projects/half_marathon_app/: index.html
projects/iris/: index.html
projects/language_helper_app/: index.html
projects/own_projects/: index.html
projects/survey_overview_app/: index.html
projects/titanic/: index.html
search/: search_index.json
uczestnicy/andrzej/: index.html
uczestnicy/andrzej_czarnecki/: index.html
uczestnicy/artur_lipinski/: index.html
uczestnicy/artur_porochonski/: index.html
uczestnicy/dariusz_samol/: index.html
uczestnicy/dawid/: index.html
uczestnicy/grzegorz/: index.html
uczestnicy/grzegorz_czopinski/: index.html
uczestnicy/hubert_drozda/: index.html
(+160 files in other folders)
